[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tsify =  { version = "0.4", optional = true, default-features = false, features = ["js"] }
ts-interop = { path = "../ts-interop" }
wasm-bindgen = { version = "0.2", optional = true }


[features]
wasm = ["dep:wasm-bindgen", "dep:tsify"]